--- a/views/projects/update.ejs
+++ b/views/projects/update.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<h1>Update <%= project.title %></h1>
+<h1>Update <%= project.title</h1>
 
 <form action="/projects/<%= project.id %>/update?_method=PUT" method="POST">
     <label>Title:</label>
