--- a/views/projects/new-project.ejs
+++ b/views/projects/new-project.ejs
@@ -2,11 +2,11 @@
 
 <h1>New Project</h1>
 
-<form action="/projects/my" method="POST">
+<form class="edit-new-form" action="/projects/my" method="POST">
     <label>Title:</label>
     <input type="text" name="title" required>
     
-    <label>Image (link to photo):</label>
+    <label>Image (link to image):</label>
     <input type="text" name="image">
     
     <label>Start Date:</label>
