--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -23,7 +23,7 @@
             <p><%= project.description %></p>
         </div>
         <div>
-            <img src="<%= project.image %>">
+            <img src="<%= (project.image) ? project.image : '/images/yarn-ball.png' %>">
         </div>
     </div>
 </div>
