--- a/views/projects/update.ejs
+++ b/views/projects/update.ejs
@@ -6,8 +6,8 @@
     <label>Title:</label>
     <input type="text" name="title" value="<%= project.title %>" required>
     
-    <label>Image <span class="smaller-text">(link to image):</span></label>
-    <input type="text" name="image" value="<%= project.image %>">
+    <label>Image <span class="smaller-text"> (link to image, accepts .jpeg, .jpg, .png or .gif):</span></label>
+    <input type="text" name="image" value="<%= project.image %>" title="Must start with 'https://' and end with '.jpg', '.jpeg', '.png', or '.gif'" pattern="^(?:http(s)?:\/\/)?[\w.-]+(?:\.[\w\.-]+)+[\w\-\._~:/?#[\]@!\$&'\(\)\*\+,;=.]+(?:png|jpg|jpeg|gif|svg)+$">
     
     <label>Start Date:</label>
     <input type="datetime-local" name="startDate" value="<%= startDate %>" required>
