--- a/views/projects/live-feed.ejs
+++ b/views/projects/live-feed.ejs
@@ -37,7 +37,7 @@
                 <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'In Progress' %></p>
             </div>
             <div class="tile">
-                <img src="<%= (p.image) ? p.image : '/images/yarn-ball.png' %>">
+                <img src="<%= (p.image) ? p.image : '/images/yarn-ball-copy.png' %>">
             </div>
         </div>
         
