--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -31,7 +31,7 @@
             <p><%= project.description %></p>
         </div>
         <div>
-            <img src="<%= (project.image) ? project.image : '/images/yarn-ball.png' %>">
+            <img src="<%= (project.image) ? project.image : '/images/yarn-ball-copy.png' %>">
         </div>
     </div>
 </div>
