--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,10 +12,10 @@
     <a href="/"><img src="/images/alternate-banner.png" alt="Website Banner with the words In The Loop"></a>
   </header>
   <nav>
-    <a href="/">Live Feed</a> <!-- IF MY HOME BUTTON DOES THE SAME THING AS THIS LINK, SHOULD I REMOVE THIS LINK AND MAYBE RENAME MY HOME LINK?-->
+    <a href="/" <%- title === 'Live Feed' ? 'class="active"' : '' %> >Live Feed</a> <!-- IF MY HOME BUTTON DOES THE SAME THING AS THIS LINK, SHOULD I REMOVE THIS LINK AND MAYBE RENAME MY HOME LINK?-->
     <% if (user) { %>
-      <a href="/projects/my">My Projects</a>
-      <a href="/projects/my/new">New Project</a>
+      <a href="/projects/my" <%- title === 'My Projects' ? 'class="active"' : '' %> >My Projects</a>
+      <a href="/projects/my/new" <%- title === 'New Project' ? 'class="active"' : '' %> >New Project</a>
       <div id="active-user">
         <div id="active-user-avatar"><img src="<%= user.avatar %>"></div>
         <span>Welcome, <%= user.firstName %>!</span>
