--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -185,6 +185,7 @@ nav > a:hover {
   align-items: center;
   margin: 3rem 0;
   position: relative;
+  padding: 1rem;
 }
 
 #live-feed-tile:nth-child(odd) {
@@ -224,10 +225,11 @@ img#delete-project-button-live, img#edit-project-button-live, img#see-more-proje
 }
 
 .tile > img {
-  height: 40rem;
+  /* height: 40rem; */
   display: flex;
   align-self: center;
-  margin: 1rem;
+  width: 100%;
+  /* margin: 0 1rem; */
 }
 
 .details {
@@ -235,7 +237,7 @@ img#delete-project-button-live, img#edit-project-button-live, img#see-more-proje
   flex-direction: column;
   font-size: 3rem;
   text-align: left;
-  padding: 5rem 5rem;
+  padding: 3rem;
 }
 
 .details > h5 {
@@ -355,6 +357,7 @@ img#delete-project-button, img#edit-project-button, img#see-more-project-button 
 
 #my-project-tile > h5 {
   font-size: 3rem;
+  width: 40rem;
 }
 
 #my-project-tile > p {
@@ -453,6 +456,10 @@ font-size: 3rem;
   display: grid;
   grid-template-columns: 1fr 3fr;
   width: 50rem;
+}
+
+#project-info-text > * {
+  padding: 1rem;
 }
 
 /* COMMENT SECTION */
